finish footer design

--- a/src/Components/Footer/style.module.scss
+++ b/src/Components/Footer/style.module.scss
@@ -1,3 +1,209 @@
-.footer{
-    background-color: aliceblue;
+.footer {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    padding: 50px 25px;
+
+    @media (max-width: '800px') {
+        padding: 60px 10px;
+
+
+    }
+
+    .items_desktop {
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+
+        @media (max-width: '800px') {
+            display: none;
+
+        }
+
+        .informations {
+
+            ul {
+                li {
+                    display: inline;
+                    display: flex;
+                    flex-direction: column;
+                    margin: 5px 0;
+
+                    a {
+                        color: #5e5c5c;
+
+                        &:hover {
+                            transition: all .4s;
+                            color: indigo;
+                            transform: scale(1.01);
+
+                        }
+                    }
+                }
+            }
+
+            h3 {
+                margin-bottom: 15px;
+                font-family: "Noto Sans";
+            }
+        }
+
+        .icons {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+
+            h3 {
+                margin-bottom: 15px;
+                font-family: "Noto Sans";
+            }
+
+            a {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 10px;
+                border: 1px solid indigo;
+                border-radius: 50%;
+                background-color: transparent;
+                color: indigo;
+
+                &:hover {
+                    transition: all .5s;
+                    transform: scale(1.2);
+                    background-color: indigo;
+                    color: #fff;
+
+                }
+            }
+
+            div {
+                display: flex;
+                gap: 15px;
+            }
+        }
+
+    }
+
+    .items_mobile {
+        display: none;
+
+        @media (max-width: '800px') {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+
+            .icons {
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                gap: 15px;
+                 div{
+                   display: flex;
+                   justify-content: center;
+                 }
+                h3 {
+                    margin-bottom: 15px;
+                    font-family: "Noto Sans";
+                }
+
+                a {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 10px;
+                    border: 1px solid indigo;
+                    border-radius: 50%;
+                    background-color: transparent;
+                    color: indigo;
+
+                    &:hover {
+                        transition: all .5s;
+                        transform: scale(1.2);
+                        background-color: indigo;
+                        color: #fff;
+
+                    }
+                }
+
+                div {
+                    display: flex;
+                    gap: 15px;
+                }
+            }
+
+
+        }
+
+    }
+
+
+
+    background-color: #fff;
+
+    .wave {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 20px;
+        background: url('../../assets/wave.png');
+        background-size: 1000px 100px;
+
+    }
+
+    .wave1 {
+        z-index: 1000;
+        opacity: 1;
+        bottom: 0;
+        animation: animationWave 4s linear infinite;
+
+
+    }
+
+    .wave2 {
+        z-index: 999;
+        opacity: 0.5;
+        bottom: 10px;
+        animation: animationWave2 4s linear infinite;
+
+
+    }
+
+    .wave3 {
+        z-index: 1000;
+        opacity: 0.2;
+        bottom: 15px;
+        animation: animationWave 5s linear infinite;
+
+
+    }
+
+    .wave4 {
+        z-index: 999;
+        opacity: 0.7;
+        bottom: 20px;
+        animation: animationWave2 5s linear infinite;
+
+
+    }
+
+    @keyframes animationWave {
+        0% {
+            background-position-x: 1000px;
+        }
+
+        100% {
+            background-position-x: 0px;
+        }
+    }
+
+    @keyframes animationWave2 {
+        0% {
+            background-position-x: 0px;
+        }
+
+        100% {
+            background-position-x: 1000px;
+        }
+    }
 }
