--- a/src/Pages/cart/styles.module.scss
+++ b/src/Pages/cart/styles.module.scss
@@ -3,7 +3,7 @@
     height: auto;
     padding: 0 20px;
     padding-top: 80px;
-
+padding-bottom: 30px;
     @media (max-width: '1170px') {
         flex-wrap: wrap;        
         align-items: center;
@@ -15,6 +15,10 @@
     .no_product {
         width: 100%;
         text-align: center;
+         @media (max-width: '800px') {
+       font-size: 15px;
+
+    }
     }
 
     .total_price {
