--- a/src/Components/Footer/style.module.scss
+++ b/src/Components/Footer/style.module.scss
@@ -1,7 +1,7 @@
 .footer {
     position: relative;
     width: 100%;
-    height: 200px;
+    height: auto;
     padding: 50px 25px;
 
     @media (max-width: '800px') {
@@ -23,12 +23,15 @@
 
             ul {
                 li {
+                    
                     display: inline;
                     display: flex;
                     flex-direction: column;
-                    margin: 5px 0;
-
+                    margin: 10px 0;
                     a {
+                        display: flex;
+                        align-items: center;
+                        gap: 5px;
                         color: #5e5c5c;
 
                         &:hover {
@@ -37,6 +40,16 @@
                             transform: scale(1.01);
 
                         }
+                    }
+                    &:nth-child(1){
+                        color: #000;
+                        font-size: 20px;                        
+                         margin-bottom: 15px;
+                       font-family: "Noto Sans";
+                       a{
+                        color: #000;
+                        font-weight: 600;
+                       }
                     }
                 }
             }
@@ -133,13 +146,33 @@
 
 
         }
+         
 
     }
 
+   .card_images{
+    width: 40%;
+    margin-left: auto;
+    text-align: end;
+    .card_logos {
+          display: grid;
+          grid-template-columns: auto auto auto auto;
+          align-items: center;
+          text-align: right;
 
+          img {
+            margin-left: auto;
+            width: 55px;
 
-    background-color: #fff;
+            @media (max-width: '1200px') {
+              width: 40px;
+            }
 
+          }
+        }
+
+   }
+ 
     .wave {
         position: absolute;
         top: 0;
@@ -206,4 +239,5 @@
             background-position-x: 1000px;
         }
     }
+
 }
