--- a/src/Components/Header/style.module.scss
+++ b/src/Components/Header/style.module.scss
@@ -1,5 +1,6 @@
 
 .header {
+    position: relative;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -155,5 +156,78 @@
             }
         }
     }
+     .waves{
+        position: absolute;
+        bottom:20px;
+        left: 0;
+        right: 0;
+        background-color: transparent;
+        .wave {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 20px;
+        background: url('../../assets/wave.png');
+        background-size: 1000px 100px;
+
+    }
+
+    .wave1 {
+        z-index: 1000;
+        opacity: 1;
+        bottom: 0;
+        animation: animationWave 4s linear infinite;
+
+
+    }
+
+    .wave2 {
+        z-index: 999;
+        opacity: 0.5;
+        bottom: 10px;
+        animation: animationWave2 4s linear infinite;
+
+
+    }
+
+    .wave3 {
+        z-index: 1000;
+        opacity: 0.2;
+        bottom: 15px;
+        animation: animationWave 5s linear infinite;
+
+
+    }
+
+    .wave4 {
+        z-index: 999;
+        opacity: 0.7;
+        bottom: 20px;
+        animation: animationWave2 5s linear infinite;
+
+
+    }
+
+    @keyframes animationWave {
+        0% {
+            background-position-x: 1000px;
+        }
+
+        100% {
+            background-position-x: 0px;
+        }
+    }
+
+    @keyframes animationWave2 {
+        0% {
+            background-position-x: 0px;
+        }
+
+        100% {
+            background-position-x: 1000px;
+        }
+    }
+     }
    
 }
