--- a/src/Pages/checkout/styles.module.scss
+++ b/src/Pages/checkout/styles.module.scss
@@ -504,6 +504,28 @@
           margin-right: 10px;
         }
       }
+      .questions{
+        width: 100%;
+        position: relative;
+        padding: 20px 0;
+        label{
+          position: absolute;
+          left: 15px;
+          background-color: #fff;
+          padding: 0 5px;
+          font-family: "Noto Sans";
+          top: 8px;
+        }
+        textarea{
+          width: 100%;
+          height: 100px;
+          border: 1px solid indigo;
+          outline: none;
+          padding: 20px 10px;
+          font-size: 18px;
+          border-radius: 4px;
+        }
+      }
 
     }
   }
