--- a/src/Pages/myOrders/styles.module.scss
+++ b/src/Pages/myOrders/styles.module.scss
@@ -32,9 +32,12 @@
             align-items: start;
         }
 .delete_order{
-    color: red;
+    color: indigo;
      
     margin-left: 20px;
+     @media (max-width: '450px') {
+           margin-left: auto;
+        }
 }
         div {
             position: relative;
@@ -170,4 +173,11 @@
 
         }
     }
+}
+.empty_orders{
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
