--- a/src/UI_Design/myOrdersUi/styles.module.scss
+++ b/src/UI_Design/myOrdersUi/styles.module.scss
@@ -4,7 +4,8 @@
     margin-top: 100px;
 
     @media (max-width: '900px') {
-        width: 90%;
+        width: 100%;
+        padding: 10px;
     }
 
     .product_items {
@@ -170,9 +171,7 @@
 
 
         }
-    }
-
-    .tab_btn button {
+         button {
         border-radius: 4px;
         border: 1px solid indigo;
         padding: 5px 15px;
@@ -188,7 +187,52 @@
 
 
         }
+         }
     }
+    .tab_btn_admin {
+       display: flex;
+      button {
+        border-radius: 4px;
+        border: 1px solid rgb(199, 183, 210);
+        padding: 5px 15px;
+        margin-right: 15px;
+        font-size: 18px;
+        &:hover {
+            transform: scale(1.1);
+            transition: all .3s;
+
+
+        }
+         }
+        @media (max-width: '720px') {
+            button{
+                font-size: 15px;
+        margin-right: 0;
+
+            }
+         }
+        @media (max-width: '650px') {
+           display: grid;
+           grid-template-columns: auto auto auto auto;
+           gap: 5px;
+         }
+        @media (max-width: '510px') {
+           display: grid;
+           grid-template-columns:  auto auto auto auto;
+           gap: 5px;
+           button{
+            font-size: 8px;
+             letter-spacing:1px;
+        padding: 5px 2px;
+
+           }
+         }
+
+      
+        
+    }
+
+    
 }
 
 .empty_orders {
