--- a/src/UI_Design/myOrdersUi/styles.module.scss
+++ b/src/UI_Design/myOrdersUi/styles.module.scss
@@ -224,6 +224,7 @@
             font-size: 8px;
              letter-spacing:1px;
         padding: 5px 2px;
+        font-weight: 600;
 
            }
          }
