--- a/src/Admin/Pages/Categories/styles.module.scss
+++ b/src/Admin/Pages/Categories/styles.module.scss
@@ -1,8 +1,9 @@
 .categories{
     padding-left: 20%;
     padding-top: 80px;
-     @media (max-width: '800px') {
-         padding-left: 10%;
+     @media (max-width: '1024px') {
+       padding: 10px;
+       padding-top: 80px;
 
 
         }
@@ -36,7 +37,7 @@
         // }
       }
     .category{
-        width: 30%;
+        width: 35%;
         border: 1px solid indigo;
        border-radius: 5px;
        padding: 15px;
@@ -46,9 +47,8 @@
          @media (max-width: '800px') {
           width: 50%;
         }
-         @media (max-width: '400px') {
-          width: 90%;
-          margin: auto;
+         @media (max-width: '500px') {
+          width: 100%;
 
         }
        p{
@@ -77,15 +77,23 @@
 //     }
     .input_and_btn{
         display: flex;
+        width: 100%;
+         
        input{
-           padding: 10px;
-           border: 1px solid indigo;
-           border-top-left-radius: 5px;
-           border-bottom-left-radius: 5px;
-           font-size: 17px;
-           outline: none;
+        width: 30%;
+         padding: 10px;
+         border: 1px solid indigo;
+         border-top-left-radius: 5px;
+         border-bottom-left-radius: 5px;
+         font-size: 17px;
+         outline: none;
+         @media (max-width: '500px') {
+           font-size: 15px;
+           width: 100%;
+    }
        }
        button{
+        width: 50px;
            padding: 10px;
            padding-top: 9px;
             border-top-right-radius: 5px;
@@ -95,5 +103,9 @@
            font-family: "Noto Sans";
            font-size: 17px;
        background-image: linear-gradient(to right, indigo 0%, #9966ec 51%, rgb(44, 11, 68) 100%);
-       }
+       @media (max-width: '500px') {
+        font-size: 12px;
+        padding: 5px;
+    } 
+      }
    }
