--- a/src/Admin/Pages/Users/styles.module.scss
+++ b/src/Admin/Pages/Users/styles.module.scss
@@ -4,9 +4,9 @@
     align-items: start;
     justify-content: space-between;
     height: auto;
-    padding: 0 20px;
+    padding: 0 10px;
     padding-top: 80px;
-padding-left: 20%;
+    padding-left: 20%;
     @media (max-width: '1170px') {
         flex-wrap: wrap;        
         align-items: center;
@@ -116,181 +116,18 @@ padding-left: 20%;
 
         }
     }
-
-    .overflow_table {
-        overflow-x: auto;
-        width: 80%;
-        margin: auto;
-        border-radius: 5px;
-        border: 1px solid indigo;
-
-        @media (max-width: '1170px') {
-            width: 100%;
-
-
+.overflow_table{
+    width: 100%;
+}
+    table{
+        width: 100%;
+        th{
+            text-align: left;
         }
-
-        table {
-            width: 100%;
-            font-family: Arial, Helvetica, sans-serif;
-            border-collapse: collapse;
-
-            @media (max-width: '1170px') {
-                width: 600px;
-
-
-            }
-
-            thead {
-
-
-                th {
-
-                    padding: 5px;
-                    text-align: start;
-                    border-right: 1px solid indigo;
-                    border-bottom: 1px solid indigo;
-                    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                    color: #000;
-                    &:nth-last-child(1){
-                            border-right: 0;
-                        }
-                }
-            }
-
-            tbody {
-
-                img {
-                    width: 100px;
-                    height: 100px;
-                    border-radius: 5px;
-                }
-
-                tr {
-                    border-radius: 10px;
-                    padding: 5px;
-                    text-align: start;
-                    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                    padding-left: 10px;
-
-                    td {
-                        &:nth-child(2) {
-
-                            width: 100%;
-                            height: 100%;
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                        }
-
-
-
-                        padding: 10px;
-                        border-right: 1px solid rgb(204, 111, 251);
-                        &:nth-last-child(1){
-                            border: 0;
-                        }
-                    }
-                }
-
-                .plus_minus_btn {
-                    display: flex;
-                    border: 1px solid indigo;
-                    border-radius: 4px;
-                    justify-content: space-between;
-
-                    width: 100px;
-                    height: 30px;
-
-                    span {
-                        font-size: 20px;
-                    }
-
-                    button {
-                        background: indigo;
-                        outline: none;
-                        width: 30px;
-                        border: none;
-                        height: 100%;
-                        border-right: 1px solid indigo;
-                        color: #fff;
-                        border: none;
-
-                        &:hover {
-
-                            .plus_icon,
-                            .minus_icon {
-                                transition: all .4s;
-                                transform: rotate(180deg);
-                            }
-
-                        }
-                    }
-                }
-           .delete{
-            // width: 100%;
-            // height: 100%;
-            // display: flex;
-            // justify-content: space-between;
-            // align-items: center;
-     .delete_btn {
-                    --font-color: #323232;
-                    --bg-color-sub: #dedede;
-                    --bg-color: #eee;
-                    --main-color: #323232;
-                    position: relative;
-                    width: 100px;
-                    height: 30px;
-                    cursor: pointer;
-                    display: flex;
-                    align-items: center;
-                    border: 1px solid indigo;
-                    background-color: #fff;
-                    border-radius: 4px;
-                    overflow: hidden;
-                    margin: auto;
-                }
-
-                .delete_btn,
-                .btn_icon,
-                .btn_text {
-                    transition: all 0.3s;
-                }
-
-                .delete_btn .btn_text {
-                    transform: translateX(20px);
-                    color:indigo;
-                    font-weight: 600;
-                }
-
-                .delete_btn .btn_icon {
-                    position: absolute;
-                    transform: translateX(70px);
-                    height: 100%;
-                    width: 39px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    border-left: 1px solid indigo;
-                }
-
-                 
-
-                .delete_btn:hover .btn_text {
-                    color: transparent;
-                }
-
-                .delete_btn:hover .btn_icon {
-                    width: 100px;
-                    transform: translateX(0);
-                }
-
-                .delete_btn:active {
-                    transform: translate(3px, 3px);
-                }
-           }
-           
-            }
+        td img{
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
         }
     }
 }
