--- a/src/Pages/cart/styles.module.scss
+++ b/src/Pages/cart/styles.module.scss
@@ -1,24 +1,26 @@
 .cart {
-    width: 100%;    
+    width: 100%;
     height: auto;
     padding: 0 20px;
     padding-top: 80px;
-padding-bottom: 30px;
+    padding-bottom: 30px;
+
     @media (max-width: '1170px') {
-        flex-wrap: wrap;        
+        flex-wrap: wrap;
         align-items: center;
         margin-top: 20px;
 
     }
-    
+
 
     .no_product {
         width: 100%;
         text-align: center;
-         @media (max-width: '800px') {
-       font-size: 15px;
 
-    }
+        @media (max-width: '800px') {
+            font-size: 15px;
+
+        }
     }
 
     .total_price {
@@ -30,10 +32,11 @@ padding-bottom: 30px;
         border-radius: 5px;
         padding: 20px;
         background: #fff;
-        box-shadow: 0px 0px 6px -1px rgba(123,111,111,0.75);
--webkit-box-shadow: 0px 0px 6px -1px rgba(123,111,111,0.75);
--moz-box-shadow: 0px 0px 6px -1px rgba(123,111,111,0.75);
-       @media (max-width: '1170px') {
+        box-shadow: 0px 0px 6px -1px rgba(123, 111, 111, 0.75);
+        -webkit-box-shadow: 0px 0px 6px -1px rgba(123, 111, 111, 0.75);
+        -moz-box-shadow: 0px 0px 6px -1px rgba(123, 111, 111, 0.75);
+
+        @media (max-width: '1170px') {
             position: static;
             width: 100%;
             margin-left: 0;
@@ -41,15 +44,18 @@ padding-bottom: 30px;
 
 
         }
+
         .all_price {
             display: flex;
             align-items: center;
             justify-content: space-between;
-             h1{
+
+            h1 {
                 font-size: 20px;
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
-             }
+            }
+
             span {
                 font-size: 17px;
                 font-weight: 700;
@@ -65,8 +71,7 @@ padding-bottom: 30px;
         .checkout_btn {
             width: 100%;
             margin-top: 50px;
-            // text-align: right;
-            
+
 
             button {
                 width: 100%;
@@ -79,11 +84,13 @@ padding-bottom: 30px;
                 font-size: 18px;
                 border: none;
                 font-family: "Montserrat";
+
                 &:hover {
                     transition: all .4s;
                     transform: scale(1.06);
-                    
-                }               
+
+                }
+
                 @media (max-width: '1170px') {
                     margin-top: 15px;
 
@@ -91,32 +98,35 @@ padding-bottom: 30px;
             }
 
         }
-        .continue_shop{
+
+        .continue_shop {
             display: flex;
             align-items: center;
             gap: 20px;
             margin-top: 20px;
-            &:hover{
+
+            &:hover {
                 text-decoration: underline;
-                .right_icon{
+
+                .right_icon {
                     transition: all .3s;
                     transform: translateX(5px);
                 }
             }
-            &:active{
+
+            &:active {
                 color: indigo;
             }
         }
 
 
-       
+
     }
 
     .overflow_table {
         overflow-x: auto;
         width: 75%;
         border-radius: 5px;
-        // border: 1px solid indigo;
 
         @media (max-width: '1170px') {
             width: 100%;
@@ -124,7 +134,7 @@ padding-bottom: 30px;
 
         }
 
-         
+
         table {
             border: 1px solid #ccc;
             border-collapse: collapse;
@@ -133,8 +143,8 @@ padding-bottom: 30px;
             width: 100%;
             table-layout: fixed;
 
-             
-           
+
+
 
             th {
                 padding: .625em;
@@ -142,17 +152,18 @@ padding-bottom: 30px;
 
                 &:nth-child(1) {
                     width: 250px;
-                     @media (max-width: '1170px') {
-                    
-                    width: 100%;
-                }
+
+                    @media (max-width: '1170px') {
+
+                        width: 100%;
+                    }
                 }
             }
 
             th {
                 font-size: 15px;
-               letter-spacing: 2px;   
-               color: #363535;             
+                letter-spacing: 2px;
+                color: #363535;
             }
 
             @media screen and (max-width: 1000px) {
@@ -186,7 +197,7 @@ padding-bottom: 30px;
                     text-align: right;
 
                     &::before {
-                       
+
                         content: attr(data-label);
                         float: left;
                         font-weight: bold;
