--- a/src/UI_Design/myOrdersUi/styles.module.scss
+++ b/src/UI_Design/myOrdersUi/styles.module.scss
@@ -1,11 +1,12 @@
 .my_orders {
     width: 90%;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 80px;
 
     @media (max-width: '900px') {
         width: 100%;
         padding: 10px;
+        margin-top: 60px;
     }
 
     .product_items {
@@ -43,7 +44,7 @@
             }
         }
 
-        div {
+        .order_header {
             position: relative;
             font-family: "Open Sans";
             width: auto;
@@ -60,7 +61,8 @@
                 align-items: start;
             }
 
-            .first_span,button {              
+            .first_span,
+            button {
                 border: none;
                 margin-left: 20px;
 
@@ -72,19 +74,21 @@
                     top: -15px;
                     padding: 2px 5px;
                 }
-                 .accepted{
+
+                .accepted {
                     background-color: transparent;
                     border: 2px solid green;
                     color: indigo;
-                    padding:  0 7px;
+                    padding: 0 7px;
 
                     border-radius: 3px;
                     font-family: "Noto Sans";
                 }
-                 .sent{
+
+                .sent {
                     background-color: green;
                     border: 1px solid indigo;
-                    padding:  0 7px;
+                    padding: 0 7px;
                     font-family: "Noto Sans";
                     color: #fff;
                     border-radius: 3px;
@@ -142,7 +146,58 @@
             align-items: center;
         }
 
+        .more_information {
+            width: 50%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            @media (max-width: '900px') {
+                width: 100%;
+            margin-top: 10px;
+            }
+            .customer_img{
+                display: flex;
+               align-items: start;
+               gap: 15px;
+                 img{
+                
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                padding: 2px;
+            }
+            p{
+                font-weight: 600;
+                font-size: 16px;
+                font-family: "Noto Sans";
+ @media (max-width: '500px') {
+                display: none;
+            }
+            }
+            }
+            span{
+                 &:hover{
+                    transition: all .4s;
+                    transform: scale(1.1);
+                 }
+            }
+
+            .total_price {
+
+                font-size: 18px;
+                color: rgb(78, 35, 118);
+                font-weight: 600;
+                font-family: "Noto Sans";
+
+                @media (max-width: '900px') {
+                    font-size: 14px;
+                    margin-top: 0;
+                }
+            }
+        }
+
     }
+
 
     .active_tab {
         color: #fff;
@@ -171,69 +226,89 @@
 
 
         }
-         button {
-        border-radius: 4px;
-        border: 1px solid indigo;
-        padding: 5px 15px;
-        margin-right: 15px;
-        font-size: 18px;
+
+        button {
+            border-radius: 4px;
+            border: 1px solid indigo;
+            padding: 5px 15px;
+            margin-right: 15px;
+            font-size: 18px;
 
 
 
 
-        &:hover {
-            transform: scale(1.1);
-            transition: all .3s;
+            &:hover {
+                transform: scale(1.1);
+                transition: all .3s;
 
-
-        }
-         }
-    }
-    .tab_btn_admin {
-       display: flex;
-      button {
-        border-radius: 4px;
-        border: 1px solid rgb(199, 183, 210);
-        padding: 5px 15px;
-        margin-right: 15px;
-        font-size: 18px;
-        &:hover {
-            transform: scale(1.1);
-            transition: all .3s;
-
-
-        }
-         }
-        @media (max-width: '720px') {
-            button{
-                font-size: 15px;
-        margin-right: 0;
 
             }
-         }
-        @media (max-width: '650px') {
-           display: grid;
-           grid-template-columns: auto auto auto auto;
-           gap: 5px;
-         }
-        @media (max-width: '510px') {
-           display: grid;
-           grid-template-columns:  auto auto auto auto;
-           gap: 5px;
-           button{
-            font-size: 8px;
-             letter-spacing:1px;
-        padding: 5px 2px;
-        font-weight: 600;
-
-           }
-         }
-
-      
-        
+        }
     }
 
-    
+    .tab_btn_admin {
+        display: flex;
+
+        button {
+            border-radius: 4px;
+            border: 1px solid rgb(199, 183, 210);
+            padding: 5px 15px;
+            margin-right: 15px;
+            font-size: 18px;
+            font-weight: 500;
+
+            letter-spacing: 1px;
+
+            &:hover {
+                transform: scale(1.1);
+                transition: all .3s;
+
+
+            }
+        }
+
+        @media (max-width: '720px') {
+            button {
+                font-size: 15px;
+                margin-right: 0;
+
+            }
+        }
+
+        @media (max-width: '650px') {
+            display: grid;
+            grid-template-columns: auto auto auto auto;
+            gap: 5px;
+        }
+
+        @media (max-width: '590px') {
+            display: grid;
+            grid-template-columns: auto auto;
+            gap: 5px;
+
+            button {
+                padding: 5px;
+
+            }
+        }
+
+        @media (max-width: '330px') {
+            display: grid;
+            grid-template-columns: auto auto;
+            gap: 5px;
+
+            button {
+                font-size: 12px;
+                padding: 5px;
+
+            }
+        }
+
+
+
+    }
+
+
 }
 
 .empty_orders {
@@ -242,4 +317,86 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    h1{
+        font-family: "Noto Sans";
+        @media (max-width: '800px') {
+                  font-size: 16px;
+              }
+    }
+}
+
+.modal_header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid indigo;
+    padding-bottom: 5px;
+
+    div {
+        display: flex;
+        align-items: center;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+p {
+            font-weight: 700;
+            font-size: 15px;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            margin-right: 5px;
+
+            img {
+                border: 1px solid indigo;
+                width: 35px;
+                height: 35px;
+                margin-left: 10px;
+                border-radius: 50%;
+
+                @media (max-width: '400px') {
+                    display: none;
+                }
+            }
+        }
+
+        span {
+            color: indigo;
+            margin-left: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+        }
+
+        :first-child {
+            color: #333;
+
+            @media (max-width: '600px') {
+                font-size: 10px;
+            }
+        }
+
+
+    }
+
+    h2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 600;
+        padding-left: 10px;
+
+        @media (max-width: '600px') {
+            font-size: 15px;
+            margin-right: 10px;
+        }
+    }
+
+    button {
+        padding: 8px;
+        background-color: transparent;
+        border: none;
+
+        .close_icon {
+            color: rgba(9, 8, 8, 0.5);
+        }
+
+    }
 }
