add framer motion

--- a/src/Components/SearchInput/styles.module.scss
+++ b/src/Components/SearchInput/styles.module.scss
@@ -43,6 +43,7 @@
  @media (max-width: '1060px') {
            width: 90%;
            left: 5%;
+           z-index: initial;
         }
             .names {
                 display: flex;
