--- a/src/UI_Design/CartItemsStyles/styles.module.scss
+++ b/src/UI_Design/CartItemsStyles/styles.module.scss
@@ -7,15 +7,13 @@ tr {
     border: 1px dotted #494747;
 
     td {
+        text-align: left;
+        padding: 25px 50px;
+
         .price_benefit {
             display: flex;
             flex-direction: column;
             width: fit-content;
-
-            // align-items: start;
-            @media (max-width: '800px') {
-                margin-left: auto;
-            }
 
             .goPlus {
                 margin: auto;
@@ -29,9 +27,6 @@ tr {
 
         }
 
-        text-align: left;
-        padding: 25px 50px;
-
         .img_admin {
             width: 200px;
         }
@@ -39,39 +34,19 @@ tr {
         &:nth-child(1) {
             padding: 10px;
             text-align: center;
-                border-radius: 10px;
+            border-radius: 10px;
+
             img {
                 width: 70%;
                 border-radius: 5px;
                 mix-blend-mode: multiply;
                 height: 100px;
 
-                @media (max-width: '1100px') {
-                    mix-blend-mode: multiply;
-                    width: 150px;
-                    margin: auto;
-                }
-
-                @media (max-width: '450px') {
-                    mix-blend-mode: multiply;
-                    width: 70%;
-                    margin: auto;
-                    height: 200px;
-                    border-radius: 10px;
-                }
-
             }
 
-            @media (max-width: '1170px') {
-                margin: auto;
-                width: 100%;
 
-            }
 
         }
-
-
-
 
         .next_prev_icons {
             .arrow {
@@ -154,11 +129,7 @@ tr {
             width: 100px;
             height: 30px;
 
-            @media (max-width: '1170px') {
-                margin-left: auto;
 
-
-            }
 
             span {
                 font-size: 20px;
@@ -203,9 +174,7 @@ tr {
                 }
             }
 
-            @media (max-width: '990px') {
-                text-align: right;
-            }
+
 
             .delete {
 
@@ -232,11 +201,7 @@ tr {
                         transition: all .3s;
                     }
                 }
-
-                @media (max-width: '950px') {
-                    left: 80%;
-                }
-
+                 
                 @media (max-width: '800px') {
                     left: 70%;
                 }
@@ -491,11 +456,12 @@ tr {
             display: flex;
             align-items: center;
             justify-content: space-between;
-           h3{
-             font-family: "Noto Sans";
-            font-weight: 500;
-            font-size: 17px;
-           }
+
+            h3 {
+                font-family: "Noto Sans";
+                font-weight: 500;
+                font-size: 17px;
+            }
         }
 
         .desc {
@@ -575,11 +541,97 @@ tr {
     }
 
     img {
-        
+
         mix-blend-mode: multiply;
 
     }
 }
+
+// ~~~~~~~~~~~~~~  Responsive Desigin ~~~~~~~~~~~~~~~~~~~~~~~~~//
+
+@media (max-width: '1170px') {
+
+    tr td {
+        &:nth-child(1) {
+            margin: auto;
+            width: 100%;
+
+        }
+    }
+
+    tr td {
+        .delete_product .delete_btn {
+            margin-left: auto;
+        }
+
+        .plus_minus_btn {
+            margin-left: auto;
+
+        }
+    }
+    
+
+
+
+}
+
+@media (max-width: '1100px') {
+
+    tr td {
+        &:nth-child(1) img {
+            mix-blend-mode: multiply;
+            width: 150px;
+            margin: auto;
+        }
+    }
+
+
+}
+
+@media (max-width: '1100px') {}
+
+@media (max-width: '990px') {
+    tr td .threeDote {
+        text-align: right;
+    }
+}
+
+@media (max-width: '950px') {
+    tr td {
+        .price_benefit {
+            margin-left: auto;
+        }
+        
+        .threeDote{
+.delete{
+            left:  80%;
+        }
+        }
+    }
+
+}
+
+@media (max-width: '800px') {}
+@media (max-width: '600px') {}
+
+@media (max-width: '450px') {
+
+    tr td {
+        &:nth-child(1) {
+            img {
+                mix-blend-mode: multiply;
+                width: 70%;
+                margin: auto;
+                height: 200px;
+            }
+        }
+    }
+
+}
+
+@media (max-width: '320px') {}
+
+
 
 .show {
     display: block;
